fd_free: fix posix advisory locks.  PR/41549 from HITOSHI OSADA.